# brifley

./: .env.example  .gitignore  Briefley_Agent_README.md  BrowserInit.py  LICENSE  README.md  app.py  async_ingest.py  classifier.py  clustering.py  docker-compose.yml  main.py  project_documentation_summary.md  proxy_manager.py  pyproject.toml  rag_engine.py  requirements.txt  responce_init.py  scraping.py  sources_config.json  summarizer.py  telegram_ingestor.py  telegram_listener.py  test.py  vdb_helper.py
static/: app.js  index.html  style.css
