[project]
name = "briefley"
version = "0.1.0"
description = "News scraping, classification, summarization, and clustering pipeline with Vector DB integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.1",
    "langdetect>=1.0.9",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "goose3>=3.1.17",
    "selenium>=4.15.2",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.33",
    "pandas>=2.0.3",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.7.0",
    "rouge-score>=0.1.2",
    "evaluate>=0.4.1",
    "datasets>=2.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
]
